--- a/src/assignment-1-choonsiong/index.html
+++ b/src/assignment-1-choonsiong/index.html
@@ -26,9 +26,9 @@
 
           <label for="complexity">Complexity:</label>
           <select id="complexity">
-            <option value="Beginner">Beginner</option>
-            <option value="Intermediate">Intermediate</option>
-            <option value="Advanced">Advanced</option>
+            <option value="Easy">Easy</option>
+            <option value="Medium">Medium</option>
+            <option value="Hard">Hard</option>
           </select>
 
           <button type="submit">Add Question</button>
@@ -74,9 +74,9 @@
             
             <label for="edit-complexity">Complexity:</label>
             <select id="edit-complexity">
-                <option value="Beginner">Beginner</option>
-                <option value="Intermediate">Intermediate</option>
-                <option value="Advanced">Advanced</option>
+                <option value="Easy">Easy</option>
+                <option value="Medium">Medium</option>
+                <option value="Hard">Hard</option>
             </select>
             
             <button type="submit">Update Question</button>
